# qz_ws

c++/: LM.cpp
c++/pcl/source/: CMakeLists.txt  cloud_merge.cpp  cloud_viewer.cpp  cloud_viewer_multi.cpp  common.h  icp_pointcloud.cpp  icp_pointcloud_2.cpp  lidar_calibrator.cpp  lidar_calibrator_test copy.cpp  lidar_calibrator_test.cpp  m1_analyze.cpp  manual_registration.cpp  ndt_pointcloud.cpp  registration_common.h
c++/pcl/source/file/: 5_left.pcd  5_mid.pcd  5_right.pcd
python/camera/: calculate_fov.py  camera_calibrate_charuco.py  camera_calibration.py  camera_calibration3.py  camera_calibration_2.py  camera_calibrator.py  camera_intrinsic_statistics.py  estimate_undistor.py  show_infoQ8001.csv  undistor_img.py  undistor_imgs.py
python/camera/calibrate/: apriltag_detect.py  blurry_test.py  calibratie_points_2.npz  camera_calibrator.py  charuco.py  charuco_2.py  common_calibrate_2.npz  undistor_imgs.py
python/camera/calibrate/result/: H110_NG_list.txt  H120_NG_list.txt  calibratie_points_0001.npz  calibratie_points_50.npz  charuco_result.npz  (+2 more)
python/camera/result/: H60_NG_list.txt  calibratie_points.npz  common_calibrate.npz
python/camera/show_info/: .~lock.Q2401.csv#  .~lock.Q8054.csv#  MKZ_DBQ3.csv  Q1001.csv  Q2201.csv  Q2202.csv  Q2204.csv  Q2208.csv  Q2301.csv  Q2302.csv  Q6001.csv  Q8000.csv  Q8001.csv  Q8002.csv  Q8005.csv  Q8054.csv  Q8055.csv  Q8056.csv  Q8099.csv  Q8099_origin.csv  Q80_jinlv.csv  all_show_extrinisc.py  camera_intrinsic.py  camera_intrinsic_statistics.py  find_0820.py  find_intrinsic.py  load_csv.py  show_extrinsic.py  show_fov.py  show_intrinsic.py  show_param.py  temp.csv  write_camera_extrinsic.py  write_dict.py  write_extrinsic_txt_csv.py  write_param_txt_csv.py
python/math/: leastsq_2.py  leastsqr.py  newton_downhill.py
python/prtobuf/: addressbook.proto  addressbook_2.proto  addressbook_2_pb2.py  addressbook_pb2.py  output.txt  output_2.txt  output_3.txt  proto_test.py  proto_test_2.py
python/test/: caculate_canbus_load.py  degree2rad.py  gnss.py  gnss2.py  h60.csv  list.txt  qt128.py  rename.py  test.py  tmp_arr1.csv  x_sinx_tanx.py
(+10 files in other folders)
